# EE4930AdvanceEmbeddedClass

./: .ccsproject  .cproject  .project  CMakeLists.txt  CustomMakeFile.mk  README  descriptions.txt
.launches/: AdvanceEmbeddedArm.launch
UnitTests/: CMakeLists.txt  check_fifoparam.c  check_money.c
app/: EE4930_FINAL_EXAM.c  EE4930_FINAL_EXAM.h  EE4930_LAB1.c  EE4930_LAB1.h  EE4930_LAB2.c  EE4930_LAB2.h  EE4930_LAB3.c  EE4930_LAB3.h  EE4930_LAB4.c  EE4930_LAB4.h  EE4930_LAB5.c  EE4930_LAB5.h  EE4930_LAB6.c  EE4930_LAB6.h  EE4930_exam1_p2_after_mods.c  EE4930_exam1_p2_before_mods.c  main.c
bsp/: CMakeLists.txt  UnitTestBSPmain.c  defines.h  fifoparam.c  fifoparam.h  money.c
cmake/: CodeCoverage.cmake
doc/: EE4930_lab1_tool_time_w22.docx  EE4930_lab2_msp432_w22.docx  EE4930_lab3_optimize_w22.docx  Github Commit Token
doc/deliverables/: EE4930_Final_Exam_JJ.docx  EE4930_lab_report_1_JJ.docx  EE4930_lab_report_2_JJ.docx  EE4930_lab_report_3_JJ.docx  EE4930_lab_report_4_JJ.docx  EE4930_lab_report_5_JJ.docx  EE4930_lab_report_6_JJ.docx
doc/misc/: FInalExamDraw.drawio  Lab4_schematic.drawio  State_diagram_fsm.drawio  Untitled Diagram.drawio  ee4930_lab3_results_form.xlsx  lab5_schematic.drawio
drivers/: MSP432P401R_CPU.c  MSP432P401R_CPU.h  MSP432P401R_DEBUG.h  MSP432P401R_GPIO.c  MSP432P401R_GPIO.h  MSP432P401R_INTERRUPT.c  MSP432P401R_INTERRUPT.h
